--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 .logo {
@@ -8,6 +9,7 @@ body {
 
 .form-header {
   margin-top: 0;
+  color: #fff;
 }
 
 .homepage {
@@ -15,4 +17,19 @@ body {
   background-image: url('https://www.metallica.com/on/demandware.static/-/Sites-Metallica-Library/default/dwb6d5ba9e/images/homepage/home-hero.jpg');
   width: 100%;
   height: 100vh;
+}
+
+.register-form {
+  border: 1px solid #333;
+  background: rgba(69, 69, 69, 0.66);
+  padding: 5% 5%;
+  width: 33%;
+}
+
+.register-form input[type='submit'] {
+  background: #FF6700;
+  padding: 1% 2%;
+  border: 1px solid orange;
+  text-transform: uppercase;
+  font-weight: 600px;
 }
