--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body {
 
 .form-header {
   margin-top: 0;
+  margin-bottom: 3.5%;
   color: #fff;
 }
 
@@ -22,8 +23,14 @@ body {
 .register-form {
   border: 1px solid #333;
   background: rgba(69, 69, 69, 0.66);
-  padding: 5% 5%;
-  width: 33%;
+  padding: 3% 4% 3.5% 5%;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.register-form input[type='text'] {
+  width: 50%;
+  padding: 1% 3% 1% 0.5%;
 }
 
 .register-form input[type='submit'] {
@@ -32,4 +39,8 @@ body {
   border: 1px solid orange;
   text-transform: uppercase;
   font-weight: 600px;
+}
+
+.register-form input[type='submit']:hover {
+  cursor: pointer;
 }
