--- a/main.css
+++ b/main.css
@@ -4,13 +4,16 @@ body {
 }
 
 .logo {
-  padding-top: 5%;
+  padding-top: 3%;
+  margin-bottom: 3%
 }
 
 .form-header {
   margin-top: 0;
   margin-bottom: 3.5%;
   color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.11px;
 }
 
 .homepage {
@@ -22,7 +25,7 @@ body {
 
 .register-form {
   border: 1px solid #333;
-  background: rgba(69, 69, 69, 0.66);
+  background: rgba(69, 69, 69, 0.45);
   padding: 3% 4% 3.5% 5%;
   width: 60%;
   margin: 0 auto;
@@ -37,6 +40,7 @@ body {
   background: #FF6700;
   padding: 1% 2%;
   border: 1px solid orange;
+  color: #fff;
   text-transform: uppercase;
   font-weight: 600px;
 }
